fixed context menu button shifting table layout

--- a/web/projects/style.css
+++ b/web/projects/style.css
@@ -153,14 +153,14 @@
             border-bottom: solid 1px var(--border-clr);
             & a {
                 text-decoration: none;
+                display: flex;
             }
         }
 
         & td:last-child {
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-            align-items: center;
+            & a {
+                justify-content: flex-end;
+            }
         }
 
 
